# tnvim

./: Cargo.toml  LICENSE  README.md
nvimapi/: Cargo.toml  build.rs  nvimapi.msgpack
nvimapi/src/: contseq.rs  error.rs  generated.rs  handler.rs  lib.rs  main.rs  manager.rs  manualser.rs  msgrpc.rs  namevalue.rs  notify.rs  nvimapi.json  nvimapi.rs  out.txt  pairs.rs  readloop.rs  valuedeserilizer.rs  valueseq.rs
nvimapi/src/manualser/: color.rs
nvimapi/src/msgrpc/: message.rs
nvimapi/src/msgrpc/message/: response.rs
nvimapi/src/nvimapi/: notification.rs  notify.rs
nvimapisys/: Cargo.toml
nvimapisys/src/: build.rs  error.rs  generated.rs  lib.rs  main.rs  msgrpc.rs  nvimapi.rs  nvimrpc.rs  out.rs  pairs.rs  readloop.rs
nvimapisys/src/msgrpc/: message.rs
nvimapisys/src/msgrpc/message/: notification.rs  request.rs  response.rs
nvimapisys/src/nvimapi/: notify.rs
nvimapisys/src/nvimrpc/: msgmapc.rs  valueseq.rs
terminal/: Cargo.toml
terminal/src/: error.rs  lib.rs
tnvim/: Cargo.toml
tnvim/src/: app.rs  error.rs  handler.rs  lib.rs  main.rs  nvim.rs  term.rs  terminal.rs
tnvim/src/nvim/: data.rs  encounteredevents.rs  implementedevents.rs  unencounteredevents.rs
