[workspace]
resolver = "2"
members = ["nvimapi", "tnvim",]
exclude = []

[profile.dev]
# opt-level = 1
debug = "line-tables-only"
incremental = true

[profile.dev.package."*"]
opt-level = 3
debug = "none"
incremental = false

[workspace.dependencies]
crossterm = "0.29"
log = "0.4"
indexmap = "2.12"
suffixes = "0.3.1"
rmp = "0.8"
rmpv = {version = "1.3", features = ["with-serde"] }
rmp-serde = "1.3"
serde = {version = "1.0", features = ["derive"]}
serde_repr = {version = "0.1"}
env_logger = "0.11"
rustc-hash = "2.1"
nvimapi = {path = "nvimapi"}
tokio = {version = "1.48", features = ["net", "rt"]}
signal-hook = "0.3"
nix = "0.30"
anyhow = "1.0"
veci1 = {path = "../veci1"}
grid = "1.0"

[workspace.lints]

[workspace.lints.clippy]
needless_return = "allow"
