[package]
name = "nvimapi"
version = "0.1.0"
edition = "2024"

[dependencies]
rmpv.workspace = true
log.workspace = true
env_logger.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json = "1.0"
suffixes.workspace = true
tokio = {workspace = true, features = ["sync"]}

[build-dependencies]
rmpv.workspace = true

[lints]
workspace = true
