[package]
name = "tnvim"
version = "0.1.0"
edition = "2024"

[dependencies]
suffixes.workspace = true
rustc-hash.workspace = true
crossterm.workspace = true
nvimapi.workspace = true
rmp.workspace = true
serde_json = "1.0"
rmpv.workspace = true
tokio = {workspace = true, features = ["time", "sync"]}
log.workspace = true
env_logger.workspace = true
serde.workspace = true
nix = {workspace = true, features = ["signal"]}
color-eyre = { version = "0.6", default-features = false }
log-panics = "2.1"
# signal-hook = {workspace = true , features = ["signal"]}
